[Background Fetch] Add a pause state for the job details.

This solves the issue of auto-resuming notifications. OnItemUpdated was
being called after the notification was paused with an offline item
containing an out-of-sync status.

There is also a race condition between pausing the job (OIC) and the
download completing (DS), so new downlaods need to be throttled in case
the job is paused.

Bug: 855856
Change-Id: I537789e7b1607fc4ce69b9cc7593a6499152475c
Reviewed-on: https://chromium-review.googlesource.com/1241157
Commit-Queue: Rayan Kanso <rayankans@chromium.org>
Reviewed-by: Peter Beverloo <peter@chromium.org>
Reviewed-by: Mugdha Lakhani <nator@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595083}
Former-commit-id: 76e026f167fb2eadd321df5ba234db43dd5fe792